Add the media player back
The media player was broken with the bump to govuk_template. This brings
it back. It now uses the stylesheet from the template. jquery ui is
needed to let the slider work. This is the minium jquery ui needed to
make it work.

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -9,6 +9,7 @@
 @import "../toolkit/stylesheets/_typography";
 @import "../toolkit/stylesheets/_conditionals";
 @import "../toolkit/stylesheets/_shims";
+@import "../toolkit/stylesheets/design-patterns/_media-player";
 
 @import "helpers/_conditionals2.scss";
 
@@ -48,6 +49,7 @@
 @import "helpers/_tooltip.scss";
 @import "helpers/_user-satisfaction-survey";
 @import "helpers/_inline-images.scss";
+@import "helpers/_media-player.scss";
 
 // Views
 @import "views/_default.scss";
