--- a/_includes/layouts/_body.html
+++ b/_includes/layouts/_body.html
@@ -1,4 +1,6 @@
 <script src="/service-manual/assets/javascript/jquery-1.7.2.js" type="text/javascript"></script>
+<script src="/service-manual/assets/javascript/jquery-ui-1.10.2.custom.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
+<script src="/service-manual/assets/toolkit/javascripts/vendor/jquery/jquery.player.min.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
 <script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
 <script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
 
