--- a/service-manual/assets/stylesheets/views/_design-patterns.scss
+++ b/service-manual/assets/stylesheets/views/_design-patterns.scss
@@ -13,6 +13,35 @@
   margin: 1em 0 2em 0;
 }
 
+.example {
+  
+  @extend %contain-floats;
+  position: relative;
+  overflow: hidden;
+
+  background: $white;
+  
+  border: 1px solid $border-colour;
+  outline: $gutter-half solid $highlight-colour;
+  margin: $gutter 0 $gutter*2 0;
+  padding: $gutter-half;
+  @include media(tablet) {
+    padding: $gutter $gutter-half;
+  }
+  
+  &.example-wide {
+    margin-right: 0;
+    @include media(tablet) {
+      margin-right: -33.33%;
+    }
+  }
+  
+  .highlight {
+    font-style: normal;
+    color: $hm-government;
+  }
+}
+
 .contents li ol{
   display: none;
 }
