Create design pattern template and update content accordingly

--- a/service-manual/assets/stylesheets/helpers/_page-header.scss
+++ b/service-manual/assets/stylesheets/helpers/_page-header.scss
@@ -17,7 +17,7 @@ header.page-header {
       padding-bottom: 1.3rem;
     }
 
-    h2.subtitle{
+    .subtitle{
       margin: 0;
       color: $secondary-text-colour;
       @include core-24;
