--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -59,6 +59,7 @@
 @import "views/_colour-palettes.scss";
 @import "views/_design-patterns.scss";
 @import "views/_detailed-guidance.scss";
+@import "views/_detailed-guidance-2.scss";
 @import "views/_home-page.scss";
 @import "views/_icons.scss";
 @import "views/_phases.scss";
@@ -75,4 +76,5 @@
 @import "views/_panels.scss";
 @import "views/_progress-indicator.scss";
 @import "views/_grid.scss";
+@import "views/_design-resources.scss";
 
