--- a/service-manual/assets/stylesheets/views/_detailed-guidance-2.scss
+++ b/service-manual/assets/stylesheets/views/_detailed-guidance-2.scss
@@ -1,4 +1,15 @@
 .detailed-guidance-2 {
+  #global-breadcrumb{
+    border-bottom: 0;
+  }
+  header.page-header{
+    padding: 0;
+    border-bottom: 0;
+    h1{
+      margin-top: 45px;
+      padding-top: 0;
+    }
+  }
   .article-container {
     .inner {
       padding: 0 1em 2em 1em;
