Restyle survey banner

--- a/_layouts/role-index-designers.html
+++ b/_layouts/role-index-designers.html
@@ -2,6 +2,7 @@
 layout: default-wrapper
 section_class: wide role-index
 ---
+{% include _breadcrumbs.html %}
 
 <header class="page-header group">
   <div class="hgroup">
