--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -3,9 +3,11 @@ layout: govuk_template
 header_class: with-proposition
 ---
 <section id="user-satisfaction-survey" class="visible">
-  <div class="wrapper">
-    <h1>Tell us what you think</h1>
-    <p><a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Take the 3 minute survey</a>. This will open a short survey on another website</p>
+  <div class="inner">
+    <p>
+    	<a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Tell us what you think</a> 
+    	(opens a 3 minute survey on another website)
+    </p>
   </div>
 </section>
 
