--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -50,6 +50,7 @@
 @import "helpers/_user-satisfaction-survey";
 @import "helpers/_inline-images.scss";
 @import "helpers/_media-player.scss";
+@import "helpers/_examples.scss";
 
 // Views
 @import "views/_default.scss";
