Update example border style
Conflicts:
	service-manual/assets/stylesheets/design-patterns/_help-popup.scss
	service-manual/assets/stylesheets/helpers/_examples.scss

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -38,6 +38,7 @@
 @import "helpers/_user-satisfaction-survey";
 @import "helpers/_inline-images.scss";
 @import "helpers/_media-player.scss";
+@import "helpers/_examples.scss";
 
 
 // Views
