Refactor so that whole message is inside link

--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -5,8 +5,10 @@ header_class: with-proposition
 <section id="user-satisfaction-survey" class="visible">
   <div class="inner">
     <p>
-    	<a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">Tell us what you think</a> 
-    	(opens a 3 minute survey on another website)
+    	<a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">
+    		<strong>Tell us what you think</strong> 
+    		<span>(opens a 3 minute survey on another website)</span>
+    	</a>
     </p>
   </div>
 </section>
