Use same breadcrumb code as rest of GOV.UK

--- a/_includes/_breadcrumbs.html
+++ b/_includes/_breadcrumbs.html
@@ -1,11 +1,9 @@
 {% if page.breadcrumbs %}
 <div id="global-breadcrumb" class="header-context">
-  <nav role="navigation">
-    <ol class="group">
-      {% for crumb in page.breadcrumbs %}
-      <li><a href="{{ crumb.url }}">{{ crumb.title }}</a></li>
-      {% endfor %}
-    </ol>
-  </nav>
+	<ol role="breadcrumbs" class="group">
+	  {% for crumb in page.breadcrumbs %}
+	  <li><a href="{{ crumb.url }}">{{ crumb.title }}</a></li>
+	  {% endfor %}
+	</ol>
 </div>
 {% endif %}
