Use same breadcrumb code as rest of GOV.UK

--- a/service-manual/assets/stylesheets/helpers/_breadcrumbs.scss
+++ b/service-manual/assets/stylesheets/helpers/_breadcrumbs.scss
@@ -46,7 +46,7 @@
 
     li {
       @include core-16;
-      background-image: url("../images/separator.png");
+      background-image: url("../govuk_template/images/separator.png");
       background-position: 100% 50%;
       background-repeat: no-repeat;
       float: left;
@@ -57,7 +57,7 @@
       padding-right: 1em;
 
       @include device-pixel-ratio() {
-        background-image: url("../images/separator-2x.png");
+        background-image: url("../govuk_template/images/separator-2x.png");
         background-size: 6px 11px;
       }
 
