Remove unused left margin

--- a/service-manual/assets/stylesheets/views/_category-index.scss
+++ b/service-manual/assets/stylesheets/views/_category-index.scss
@@ -4,7 +4,7 @@
       padding: 0 1em;
 
       @include media(desktop) {
-        margin-left: 25%;
+        margin-right: 33.33%;
         padding: 0 2em;  
       }
 
