Add spacing above page footer, as per rest of GOV.UK

--- a/service-manual/assets/stylesheets/layouts/_gsdm.scss
+++ b/service-manual/assets/stylesheets/layouts/_gsdm.scss
@@ -55,6 +55,9 @@ article {
     padding: 0 10em 2em 2em;
     width: auto;
   }
+  .article-container{
+    margin-bottom: 45px;
+  }
 }
 
 /* Global footer */
