--- a/service-manual/assets/stylesheets/helpers/_page-tools.scss
+++ b/service-manual/assets/stylesheets/helpers/_page-tools.scss
@@ -2,7 +2,7 @@
   ol {
     list-style: none;
     border-top: 1px solid $border-colour;
-    margin: 0;
+    margin: 45px 0 0 0;
     padding: 1em 0;
 
     li {
