Move images out of template folder

--- a/service-manual/assets/stylesheets/helpers/_typography.scss
+++ b/service-manual/assets/stylesheets/helpers/_typography.scss
@@ -186,7 +186,7 @@ article ul, article ol {
 */
 article ul {
   list-style-type: circle;
-  list-style-image: url("../govuk_template/images/bullet-disc-5px.gif");
+  list-style-image: url("../images/bullet-disc-5px.gif");
 }
 
 article ol {
