--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -1,11 +1,10 @@
 <h3>Guides and resources for…</h3>
 <ul class="roles">
-  <li><a href="/service-manual/service-managers">Service managers</a></li>
-  <li><a href="/service-manual/content-designers">Content designers</a></li>
-  <li><a href="/service-manual/designers">Designers</a></li>
-  <li><a href="/service-manual/developers">Developers</a></li>
-  <li><a href="/service-manual/user-researchers">User researchers</a></li>
-  <li><a href="/service-manual/web-ops">Web operations</a></li>
-  <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
-  <li><a href="/service-manual/chief-technology-officers">Chief technology officers</a></li>
+  <li><a href="/service-manual/service-managers/index.html">Service management</a></li>
+  <li><a href="/service-manual/design-and-content/index.html">Design and content</a></li>
+  <li><a href="/service-manual/developers/index.html">Web development</a></li>
+  <li><a href="/service-manual/user-researchers/index.html">User research</a></li>
+  <li><a href="/service-manual/web-ops/index.html">Web operations</a></li>
+  <li><a href="/service-manual/performance-analysts/index.html">Measuring performance</a></li>
+  <li><a href="/service-manual/chief-technology-officers/index.html">Technology</a></li>
 </ul>
