Reduce whitespace on index page

--- a/_layouts/design-index.html
+++ b/_layouts/design-index.html
@@ -3,6 +3,8 @@ layout: default-wrapper
 section_class: wide design-resources
 ---
 
+{% include _breadcrumbs.html %}
+
 <article>
   <header class="page-header group">
     <div class="hgroup">
