--- a/service-manual/assets/stylesheets/views/_detailed-guidance-2.scss
+++ b/service-manual/assets/stylesheets/views/_detailed-guidance-2.scss
@@ -23,8 +23,8 @@
       // 1st para is bigger
       .intro {
         @include core-24;
-        padding: 10px 0;
-        margin: 0 0 1.5em 0;
+        padding: 0;
+        margin: 0 0 30px 0;
       }
 
       img {
