Remove unused Sass files relating to old design patterns content

--- a/service-manual/assets/stylesheets/helpers/_grid.scss
+++ b/service-manual/assets/stylesheets/helpers/_grid.scss
@@ -29,7 +29,8 @@
     margin-bottom: 1em;
   }
   padding: 0;
-  @include clearfix;
+  overflow: hidden;
+  *zoom: 1;
   > * { 
     display: block;
     margin: 0;
