Update to reflect 301 responses

--- a/_includes/layouts/_footer_top.html
+++ b/_includes/layouts/_footer_top.html
@@ -4,7 +4,7 @@
     <ul>
       <li><a href="/browse/driving">Driving and transport</a></li>
       <li><a href="/browse/benefits">Benefits</a></li>
-      <li><a href="/browse/business">Businesses and self-employed</a></li>
+      <li><a href="/business">Businesses and self-employed</a></li>
       <li><a href="/browse/employing-people">Employing people</a></li>
       <li><a href="/browse/abroad">Passports, travel and living abroad</a></li>        
       <li><a href="/browse/education">Education and learning</a></li>
