--- a/_includes/layouts/_footer_support_links.html
+++ b/_includes/layouts/_footer_support_links.html
@@ -3,5 +3,5 @@
   <li><a href="/help/cookies">Cookies</a></li>
   <li><a href="/contact">Contact</a></li>
   <li><a href="/cymraeg">Cymraeg</a></li>
-  <li>Built by the <a href="http://gds.blog.gov.uk/">Government Digital Service</a></li>
+  <li>Built by the <a href="https://gds.blog.gov.uk/">Government Digital Service</a></li>
 </ul>
