Add pattern example container styles

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -24,6 +24,7 @@
 // Helpers
 @import "helpers/_buttons.scss";
 @import "helpers/_breadcrumbs.scss";
+@import "helpers/_examples.scss";
 @import "helpers/_contents.scss";
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
