--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -1,11 +1,12 @@
 <h3>Guides and resources for…</h3>
 <ul class="roles">
-  <li><a href="/service-manual/service-managers">Service managers</a></li>
-  <li><a href="/service-manual/content-designers">Content designers</a></li>
-  <li><a href="/service-manual/designers">Designers</a></li>
-  <li><a href="/service-manual/developers">Developers</a></li>
-  <li><a href="/service-manual/user-researchers">User researchers</a></li>
-  <li><a href="/service-manual/web-ops">Web operations</a></li>
-  <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
-  <li><a href="/service-manual/chief-technology-officers">Chief technology officers</a></li>
+  <li><a href="/service-manual/service-managers/">Service managers</a></li>
+  <li><a href="/service-manual/content-designers/">Content designers</a></li>
+  <li><a href="/service-manual/designers/">Designers</a></li>
+  <li><a href="/service-manual/developers/">Developers</a></li>
+  <li><a href="/service-manual/user-researchers/">User researchers</a></li>
+  <li><a href="/service-manual/web-ops/">Web operations</a></li>
+  <li><a href="/service-manual/performance-analysts/">Performance analysts</a></li>
+  <li><a href="/service-manual/chief-technology-officers/">Chief technology officers</a></li>
+  <li><a href="/service-manual/technical-architects/">Technical architects</a></li>
 </ul>
