--- a/_layouts/cards.html
+++ b/_layouts/cards.html
@@ -1,8 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% include _head.html %}
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Cards — Government Service Design Manual</title>
+    {% include layouts/_head.html %}
 
 <style media="screen, print">
 html{
@@ -55,13 +56,13 @@ a:after{display: none;}
 <div class="card">
     <h3>{{ p.title }}</h3>
     <p>{{ p.subtitle }}</p>
-    <p><a href="{{ p.url }}">{{ p.url }}</a></p>
+    <p><a href="{{ p.url }}">https://www.gov.uk{{ p.url }}</a></p>
     <hr>
     <!--
     <p class="audience">Primary audience: {{ p.audience.primary }}</p>
     <p class="audience">Secondary audience: {{ p.audience.secondary }}</p>
     -->
-    
+
 </div>
   {% endif %}
 {% endfor %}
