Add search to the service manual
This includes a bit of duplication from the regular Jekyll service
manual, but it's all contained in the _search directory. As explained
in that README, I believe this is due to the way Jekyll implements
Liquid.

Bump the version of GDS API adapters because the version I included
from the design-principles app is out of date.

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -52,6 +52,7 @@
 @import "views/_home-page.scss";
 @import "views/_phases.scss";
 @import "views/_role-index.scss";
+@import "views/_search.scss";
 @import "views/_standard.scss";
 @import "views/_wide.scss";
 
