--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -2,16 +2,7 @@
 layout: govuk_template
 header_class: with-proposition
 ---
-<section id="user-satisfaction-survey" class="visible">
-  <div class="inner">
-    <p>
-    	<a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">
-    		<strong>Tell us what you think</strong> 
-    		<span>(opens a 3 minute survey on another website)</span>
-    	</a>
-    </p>
-  </div>
-</section>
+<div id="user-satisfaction-survey-container" data-survey-url="https://www.surveymonkey.com/s/servicemanual"></div>
 
 <div id="wrapper">
 
