Update footer links and styles to match static
Update toolkit for latest `measurements` file.

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -8,6 +8,7 @@
 @import "../toolkit/stylesheets/_device-pixels";
 @import "../toolkit/stylesheets/_typography";
 @import "../toolkit/stylesheets/_conditionals";
+@import "../toolkit/stylesheets/_measurements";
 @import "../toolkit/stylesheets/_shims";
 @import "../toolkit/stylesheets/design-patterns/_media-player";
 
