--- a/service-manual/assets/stylesheets/layouts/_gsdm.scss
+++ b/service-manual/assets/stylesheets/layouts/_gsdm.scss
@@ -63,106 +63,78 @@ article {
 /* Global footer */
 
 #footer {
-  $grey-6: #a1acb2;
   .footer-categories {
-    font-size: 0;
-    float: left;
+    @extend %contain-floats;
 
-    border: 1px solid $grey-6;
-    border-width: 0 0 1px 0;
-
-    margin-bottom: 30px;
-
-    padding: 20px 0;
-
-    width: 100%;
-
-    @include media(tablet) {
-      padding: 0 0 60px 0;
+    @include media(tablet){
+      padding: 0 $gutter-half $gutter;
     }
 
-    .footer-explore {
-      float: left;
-      margin: 0 0 30px 0;
-      width: 100%;
+    .footer-explore,
+    .footer-inside-government {
+      @include media(tablet){
+        float: left;
+        width: 66.66%;
+        padding-bottom: 60px;
+      }
 
-      @include media(tablet) {
-        margin-right: 7%;
-        display: block;
-        width: 62%;
+      h2 {
+        margin: 0 15px;
+        padding: 10px 0 0;
+
+        @include media(tablet) {
+          padding: 0 0 20px;
+          border-bottom: 1px solid $border-colour;
+        }
+      }
+    }
+
+    hr {
+      clear: both;
+      margin: 0 15px 30px;
+      border: 1px solid $border-colour;
+      border-width: 1px 0 0 0;
+
+      @include media(tablet){
+        margin-bottom: 0;
       }
     }
 
     ul {
       @include core-16;
       list-style: none;
+      padding: 0;
+      margin: 0;
 
-      border: 0 solid $grey-6;
-
-      margin: 20px 0 0 0;
-      padding: 20px 0 0 0;
-
-      min-height: 0;
-
-      vertical-align: top;
-
-      @include media(tablet) {
-        min-height: 210px;
-        border-width: 1px 0 0 0;
-
+      @include media(tablet){
+        float: left;
+        margin: 15px 0 0 0;
+        width: 50%;
       }
 
       li {
         display: block;
-        clear: left;
-        margin: 0 0 15px 0;
-        list-style: none;
+        margin-bottom: 5px;
 
-        @include ie-lte(8) {
-          display: inline;
-          min-height: 1.5em;
-          clear: none;
+        padding: 10px 0 0;
+        margin: 0 15px 5px;
+
+        @include media(tablet){
+          padding: 20px 0 0;
+          margin: 0 15px;
         }
-
-        @include ie(6) {
-          height: 1.5em;
-        }
-
-        @include media(tablet) {
-          float: left;
-          width: 45.5%;
-
-
-          &:nth-child(even) {
-            float: right;
-            clear: none;
-          }
-        }
-      }
-
-      @include ie(6) {
-        border-top: none;
-        zoom: 1;
       }
     }
 
     .footer-inside-government {
       @include media(tablet){
         float: left;
-        width: 31%;
+        width: 33.33%;
       }
 
       ul {
-        margin: 20px 0 0 0;
-
         li {
-          margin-right: 0;
           width: 100%;
-
-          &:nth-child(even) {
-            float: none;
-            clear: none;
-          }
         }
       }
     }
