--- a/_includes/layouts/_body.html
+++ b/_includes/layouts/_body.html
@@ -1,11 +1,11 @@
-<script src="/service-manual/assets/javascript/jquery-1.7.2.js" type="text/javascript"></script>
-<script src="/service-manual/assets/javascript/jquery-ui-1.10.2.custom.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
-<script src="/service-manual/assets/toolkit/javascripts/vendor/jquery/jquery.player.min.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
-<script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
-<script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
-<script src="/service-manual/assets/javascript/forms.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
+<script src="/service-manual/assets/javascript/jquery-1.7.2.js"></script>
+<script src="/service-manual/assets/javascript/jquery-ui-1.10.2.custom.js?cache={{ site.time | date: "%s" }}"></script>
+<script src="/service-manual/assets/toolkit/javascripts/vendor/jquery/jquery.player.min.js?cache={{ site.time | date: "%s" }}"></script>
+<script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}"></script>
+<script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}"></script>
+<script src="/service-manual/assets/javascript/forms.js?cache={{ site.time | date: "%s" }}"></script>
 
-<script id="ga-params" type="text/javascript">
+<script id="ga-params">
   var GOVUK = GOVUK || {};
   GOVUK.Analytics = GOVUK.Analytics || {};
   var _gaq = _gaq || [];
@@ -21,7 +21,7 @@
     _gaq.push(['_setCustomVar', 11, 'Pixel Ratio', String(window.devicePixelRatio), 2 ]);
   }
 </script>
-<script type="text/javascript">
+<script>
   _gaq.push(['_gat._anonymizeIp']);
   _gaq.push(['_trackPageview']);
   (function() {
