--- a/_search/includes/layouts/_footer_support_links.liquid
+++ b/_search/includes/layouts/_footer_support_links.liquid
@@ -3,5 +3,5 @@
   <li><a href="/help/cookies">Cookies</a></li>
   <li><a href="/contact">Contact</a></li>
   <li><a href="/cymraeg">Rhestr o Wasanaethau Cymraeg</a></li>
-  <li>Built by the <a href="https://gds.blog.gov.uk/">Government Digital Service</a></li>
+  <li>Built by the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a></li>
 </ul>
