New styles for the Service Standard page with 18 points
Override the existing list styles, to increase the width of the .point
wrapper now that the right hand guidance links have been removed.

Add status block styles, for the status notice to indicate the 26
points have now been changed to 18 points.

--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -96,6 +96,20 @@
 
   }
 
+  // Archived content notice
+  .status-block {
+    @include media(desktop) {
+      width: 67%;
+      margin: 30px auto;
+    }
+    margin-left: 0;
+    margin-right: 0;
+    border: 5px solid $govuk-blue;
+    padding: 30px 15px;
+
+    @include core-36;
+  }
+
   // The list of criteria
   .standard {
     //display: inline-block;
@@ -200,6 +214,18 @@
       }
     }
 
+  }
+
+  // The updated list of criteria
+  .updated-standard {
+    li {
+      .point {
+        // Increase width of point wrapper for tablet and up
+        @include media(tablet) {
+          width: 67%;
+        }
+      }
+    }
   }
 
   .link-list {
