Updated survey copy and link

--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -5,10 +5,11 @@ header_class: with-proposition
 <section id="user-satisfaction-survey" class="visible">
   <div class="inner">
     <p>
-    	<a href="https://www.surveymonkey.com/s/servicemanual" id="take-survey" target="_blank">
-    		<strong>Tell us what you think</strong> 
-    		<span>(opens a 3 minute survey on another website)</span>
-    	</a>
+      We're improving the Service Manual.
+      <a href="https://www.surveymonkey.com/s/service-manual" id="take-survey" target="_blank">
+        <strong>Help us get it right</strong> 
+        <span>(opens a short survey on another website.)</span>
+      </a>
     </p>
   </div>
 </section>
