--- a/service-manual/assets/stylesheets/helpers/_user-satisfaction-survey.scss
+++ b/service-manual/assets/stylesheets/helpers/_user-satisfaction-survey.scss
@@ -9,15 +9,16 @@
     }
     border-bottom: 1px solid $border-colour;
   }
-  p a{
-    font-size: 16px;
-    text-decoration: none;
-    strong{
-      text-decoration: underline;
-    }
-    span{
-      color: $secondary-text-colour;
-      padding-left: 10px;
+  p { font-size: 16px;
+      a{
+      text-decoration: none;
+      strong{
+        text-decoration: underline;
+      }
+      span{
+        color: $secondary-text-colour;
+        padding-left: 10px;
+      }
     }
   }
 }
