Now with smart quotes.

--- a/_includes/_phases.html
+++ b/_includes/_phases.html
@@ -10,7 +10,7 @@
   <li class="alpha">
     <h3><a href="/service-manual/phases/alpha.html">Alpha</a></h3>
 
-    <p>A short phase in which you prototype solutions for your users' needs. You’ll be testing with a small group of users or stakeholders, and getting early feedback about the design of the service.</p>
+    <p>A short phase in which you prototype solutions for your users’ needs. You’ll be testing with a small group of users or stakeholders, and getting early feedback about the design of the service.</p>
 
     <p><a href="/service-manual/phases/alpha.html">Learn about the alpha phase</a></p>
 
