--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -6,7 +6,7 @@ header_class: with-proposition
   <div class="inner">
     <p>
       We're improving the Service Manual.
-      <a href="https://www.surveymonkey.com/s/service-manual" id="take-survey" target="_blank">
+      <a href="https://www.surveymonkey.co.uk/r/servicemanualsurvey" id="take-survey" target="_blank">
         <strong>Help us get it right</strong> 
         <span>(opens a short survey on another website.)</span>
       </a>
