Update banner copy to invite users to new survey
This mimics the recently updated copy on the new service manual. We hope it is more persuasive.

--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -5,11 +5,7 @@ header_class: with-proposition
 <section id="user-satisfaction-survey" class="visible">
   <div class="inner">
     <p>
-      We're improving the Service Manual.
-      <a href="https://www.surveymonkey.co.uk/r/servicemanualsurvey" id="take-survey" target="_blank">
-        <strong>Help us get it right</strong> 
-        <span>(opens a short survey on another website.)</span>
-      </a>
+      Complete our quick 5-question survey to <a href="https://www.surveymonkey.co.uk/r/servicemanualsurvey" id="take-survey" target="_blank">help us improve the service manual</a>.
     </p>
   </div>
 </section>
